# Memory-dumper

./: CMakeLists.txt  README.md
include/mem_dumper/: memory_dumper.h
src/: memory_dumper.cpp
test/: CMakeLists.txt  test.cpp
